--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
 
-<!--Side Navigation-->
-
-    <div class="sidenav">
-        <a href="#">My Day</a>
+<!--Landing Page -->
+    <p class="my-day">Today</p>
+    <div class="task">
         <a href="#" id="addTaskButton">Add Task</a>
-        <a href="#">Upcoming</a>
-        <a href="#">Search</a>
       </div>
+
+<!-- Display Date -->
+<div class="date-display" id="currentDate">
+</div>
 
 
 <!--Add new task-->
@@ -30,8 +31,7 @@
     </div>
 </div>
 
-<!-- Display Date -->
-<div class="date-display" id="currentDate"></div>
+
 
 
 <script src="script.js"></script>
