--- a/index.html
+++ b/index.html
@@ -5,32 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do-list</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
 
 <!--Landing Page -->
     <p class="my-day">Today</p>
-    <div class="task">
-        <a href="#" id="addTaskButton">Add Task</a>
-      </div>
+
 
 <!-- Display Date -->
-<div class="date-display" id="currentDate">
-</div>
+    <div class="date-display" id="currentDate">
+    </div>   
+        <div class="close">&times;</div>
 
+        <div class="task-contanier">
+        <div class="task">
+            <a href="#" id="addTaskButton"><i class="fas fa-plus"></i> Add New Task</a>
+            <div class="task-options">
+                <div class="icon" data-tooltip="Due Date">
+                    <i class="fas fa-calendar-alt"></i>
+                </div>
+                <div class="icon" data-tooltip="Remind Me">
+                    <i class="fas fa-bell"></i>
+                </div>
+                <div class="icon" data-tooltip="Repeat">
+                    <i class="fas fa-sync-alt"></i>
+                </div>
+            </div>
+        </div>
+        
 
-<!--Add new task-->
+<!--Add new task
 
 <div id="taskModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
+    <div class="modal-content">   
         <h2 class="taskname">Add a Task</h2>
         <input type="text" id="taskName" placeholder="Task name" />
         <textarea id="taskDetails" placeholder="Task details"></textarea>
         <button id="saveTask">Save Task</button>
     </div>
 </div>
-
+-->
 
 
 
