task icon icons positoned

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="task">
             <a href="#" id="addTaskButton"><i class="fas fa-plus"></i> Add New Task</a>
             <div class="task-options">
-                <div class="icon" data-tooltip="Due Date">
+                <div class="icon" data-tooltip="Add Due Date">
                     <i class="fas fa-calendar-alt"></i>
                 </div>
                 <div class="icon" data-tooltip="Remind Me">
@@ -34,6 +34,8 @@
                 </div>
             </div>
         </div>
+
+    
         
 
 <!--Add new task
